# local-voice-ai

./: .env  .env.example.telnyx  .gitattributes  .gitignore  Dockerfile  README.md  compose-tui.ps1  compose-tui.sh  compose-up.sh  docker-compose.audio.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  run  run.ps1  run.py
.github/workflows/: ci.yml
frontend/: .env.example  .env.local  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/components/app/: chat-transcript.tsx  session-view.tsx  view-controller.tsx  welcome-view.tsx
frontend/components/livekit/: chat-entry.tsx
frontend/components/livekit/agent-control-bar/: agent-control-bar.tsx  agent-control-bar.tsx.bak_20260607_dsstatus  agent-control-bar.tsx.bak_20260608_113217  chat-input.tsx.bak_20260529
frontend/hooks/: useHelixMessages.ts  useStackStatus.ts
frontend/styles/: globals.css
inference/llama/: Dockerfile
livekit_agent/: .env.example  pyproject.toml
livekit_agent/src/: agent.py
local_voice_ai/: __main__.py  agent.py  api.py  config.py
local_voice_ai/realtime/: __init__.py  audio_llm.py
scripts/: run-native-audio-llm.sh  wait-ready.ps1  wait-ready.sh
tests/: conftest.py  test_api.py  test_audio_mode.py  test_config.py  test_main.py
tui/: Cargo.toml
tui/src/: app.rs  audio.rs  livekit_client.rs  main.rs  token.rs  ui.rs
